lib_LTLIBRARIES = \
libbasewindow.la \
libbasedrawable.la

libbasewindow_la_SOURCES = basewindow.c
libbasewindow_la_CFLAGS = $(BASECLASS_CFLAGS)
libbasewindow_la_LIBADD = $(BASECLASS_LIBS)

libbasedrawable_la_SOURCES = basedrawable.c
libbasedrawable_la_CFLAGS = $(BASECLASS_CFLAGS)
libbasedrawable_la_LIBADD = $(BASECLASS_LIBS)
